--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   <script>
     var currentDay = moment().format('dddd MMMM Do YYYY');
-    var currentTime = moment().format('H HH');
+    var currentTime = moment().format('H');
     document.getElementById("currentDay").innerHTML = currentDay;
     function init() {
 
